# tapiru

./: .clang-format  .clang-tidy  .clangd  .cmakelintrc  .commitizen.json  .gitignore  CMakeLists.txt  README.md  framework.json
cmake/: tapiru-config.cmake.in
emscripten/: shell.html
examples/: CMakeLists.txt  classic_app_demo.cpp  comprehensive_demo.cpp  demo.cpp  frappe_dashboard.cpp  gin_dashboard.cpp  highlighter_demo.cpp  interactive_demo.cpp  interactive_widgets_demo.cpp  markup_demo.cpp  new_features_demo.cpp  showcase_demo.cpp  spearmint_dashboard.cpp  stage5_7_demo.cpp  stout_dashboard.cpp  tapiru_dashboard.cpp  tui_demo.cpp  vfx_demo.cpp  vim_demo.cpp  widgets_demo.cpp
fuzz/: CMakeLists.txt  ansi_input_fuzzer.cpp  markup_fuzzer.cpp
include/tapiru/: exports.h  tapiru.h
include/tapiru/core/: accessibility.h  animation.h  ansi.h  canvas.h  cell.h  component.h  console.h  decorator.h  element.h  gradient.h  input.h  live.h  logging.h  raw_input.h  screen.h  shader.h  style.h  style_table.h  terminal.h  theme.h  tqdm.h  transition.h  unicode_width.h
include/tapiru/layout/: types.h
include/tapiru/testing/: test_harness.h
include/tapiru/text/: constexpr_markup.h  emoji.h  highlighter.h  markdown.h  markup.h  render_op.h
include/tapiru/widgets/: accordion.h  app_components.h  breadcrumb.h  builders.h  canvas_widget.h  chart.h  classic_app.h  component_factories.h  dropdown.h  form.h  gauge.h  grid.h  image.h  interactive.h  keybinding.h  layout.h  log_viewer.h  menu.h  menu_bar.h  paragraph.h  popup.h  progress.h  scroll_view.h  search_input.h  spinner.h  status_bar.h  tab.h  text.h  textarea.h  toast.h  toggle.h  tree_view.h  virtual_list.h
src/: core.cppm  tapiru.cpp  tapiru.cppm  text.cppm  widgets.cppm
src/core/: accessibility.cpp  component.cpp  console.cpp  decorator.cpp  element.cpp  input.cpp  live.cpp  logging.cpp  screen.cpp  theme.cpp
src/detail/: border_join.h  scene.h  widget_registry.h  widget_types.h  widgets.cpp
src/text/: emoji.cpp  highlighter.cpp  markdown.cpp  markup.cpp
src/widgets/: accordion.cpp  app_components.cpp  breadcrumb.cpp  builders.cpp  canvas_widget.cpp  chart.cpp  classic_app.cpp  component_factories.cpp  dropdown.cpp  form.cpp  gauge.cpp  grid.cpp  image.cpp  interactive.cpp  keybinding.cpp  log_viewer.cpp  menu.cpp  menu_bar.cpp  paragraph.cpp  popup.cpp  progress.cpp  scroll_view.cpp  search_input.cpp  spinner.cpp  status_bar.cpp  tab.cpp  textarea.cpp  toast.cpp  toggle.cpp  tree_view.cpp  virtual_list.cpp
tests/: CMakeLists.txt  accessibility_test.cpp  animation_test.cpp  ansi_test.cpp  app_components_test.cpp  benchmark_test.cpp  canvas_test.cpp  canvas_widget_test.cpp  chart_test.cpp  color_downgrade_test.cpp  component_factories_test.cpp  component_test.cpp  console_test.cpp  constexpr_markup_test.cpp  element_test.cpp  emoji_test.cpp  emscripten_test.cpp  form_test.cpp  gauge_test.cpp  highlighter_test.cpp  image_test.cpp  input_test.cpp  interactive_test.cpp  kitty_keyboard_test.cpp  layout_types_test.cpp  live_test.cpp  logging_test.cpp  markdown_test.cpp  markup_test.cpp  mf2_compiler_test.cpp  oklch_downgrade_test.cpp  pak_diff_test.cpp  paragraph_test.cpp  progress_test.cpp  render_op_test.cpp  scaffolding_test.cpp  scene_test.cpp  screen_test.cpp  spinner_test.cpp  style_test.cpp  (+8 more)
