# ── Test targets for tapiru ───────────────────────────────────────────────

# Helper: define a test executable linked to tapiru + gtest
function(tapiru_add_test name)
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} PRIVATE tapiru gtest gtest_main)
    if(MSVC)
        target_compile_options(${name} PRIVATE /W4 /utf-8)
    endif()
    add_test(NAME ${name} COMMAND ${name})
endfunction()

tapiru_add_test(tapiru_scaffolding_test scaffolding_test.cpp)
tapiru_add_test(tapiru_style_test style_test.cpp)
tapiru_add_test(tapiru_canvas_test canvas_test.cpp)
tapiru_add_test(tapiru_ansi_test ansi_test.cpp)
tapiru_add_test(tapiru_terminal_test terminal_test.cpp)
tapiru_add_test(tapiru_unicode_width_test unicode_width_test.cpp)
tapiru_add_test(tapiru_markup_test markup_test.cpp)
tapiru_add_test(tapiru_console_test console_test.cpp)
tapiru_add_test(tapiru_layout_types_test layout_types_test.cpp)
set(_TAPIRU_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/..")
tapiru_add_test(tapiru_scene_test scene_test.cpp ${_TAPIRU_SRC_DIR}/src/detail/widgets.cpp)
target_include_directories(tapiru_scene_test PRIVATE ${_TAPIRU_SRC_DIR}/src)
tapiru_add_test(tapiru_widget_render_test widget_render_test.cpp)
tapiru_add_test(tapiru_live_test live_test.cpp)
tapiru_add_test(tapiru_progress_test progress_test.cpp)
tapiru_add_test(tapiru_spinner_test spinner_test.cpp)
tapiru_add_test(tapiru_constexpr_markup_test constexpr_markup_test.cpp)
tapiru_add_test(tapiru_logging_test logging_test.cpp)
tapiru_add_test(tapiru_emoji_test emoji_test.cpp)
tapiru_add_test(tapiru_markdown_test markdown_test.cpp)
tapiru_add_test(tapiru_input_test input_test.cpp)
tapiru_add_test(tapiru_animation_test animation_test.cpp)
tapiru_add_test(tapiru_interactive_test interactive_test.cpp)
tapiru_add_test(tapiru_virtual_list_test virtual_list_test.cpp)
tapiru_add_test(tapiru_chart_test chart_test.cpp)
tapiru_add_test(tapiru_image_test image_test.cpp)
tapiru_add_test(tapiru_theme_test theme_test.cpp)
tapiru_add_test(tapiru_benchmark_test benchmark_test.cpp)
tapiru_add_test(tapiru_element_test element_test.cpp)
tapiru_add_test(tapiru_component_test component_test.cpp)
tapiru_add_test(tapiru_screen_test screen_test.cpp)
tapiru_add_test(tapiru_component_factories_test component_factories_test.cpp)
tapiru_add_test(tapiru_app_components_test app_components_test.cpp)
tapiru_add_test(tapiru_canvas_widget_test canvas_widget_test.cpp)
tapiru_add_test(tapiru_gauge_test gauge_test.cpp)
tapiru_add_test(tapiru_paragraph_test paragraph_test.cpp)
tapiru_add_test(tapiru_color_downgrade_test color_downgrade_test.cpp)
tapiru_add_test(tapiru_textarea_test textarea_test.cpp)
tapiru_add_test(tapiru_emscripten_test emscripten_test.cpp)
tapiru_add_test(tapiru_form_test form_test.cpp)
tapiru_add_test(tapiru_render_op_test render_op_test.cpp)
tapiru_add_test(tapiru_highlighter_test highlighter_test.cpp)
tapiru_add_test(tapiru_test_harness_test test_harness_test.cpp)

# ── New feature tests ────────────────────────────────────────────────
tapiru_add_test(tapiru_kitty_keyboard_test kitty_keyboard_test.cpp)
tapiru_add_test(tapiru_accessibility_test accessibility_test.cpp)
tapiru_add_test(tapiru_oklch_downgrade_test oklch_downgrade_test.cpp)
tapiru_add_test(tapiru_transition_test transition_test.cpp)

# pak_diff types test (header-only, needs smoothie include path)
# smoothie headers require C++23 (std::expected)
tapiru_add_test(tapiru_pak_diff_test pak_diff_test.cpp)
target_include_directories(tapiru_pak_diff_test PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/../../smoothie/include")
set_target_properties(tapiru_pak_diff_test PROPERTIES CXX_STANDARD 23)

# MF2 compiler test (header-only, needs lemonade + smoothie include paths)
# lemonade/smoothie headers require C++23 (std::expected)
tapiru_add_test(tapiru_mf2_compiler_test mf2_compiler_test.cpp)
target_include_directories(tapiru_mf2_compiler_test PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/../../lemonade/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/../../smoothie/include")
set_target_properties(tapiru_mf2_compiler_test PROPERTIES CXX_STANDARD 23)
